--- a/Drama/偷心玩家.md
+++ b/Drama/偷心玩家.md
@@ -3,3 +3,7 @@
 
 ## 演員陣容
 ### 主要人物
+
+資料
+===
+[Player(韓國電視劇)](https://zh.wikipedia.org/wiki/Player_(%E9%9F%93%E5%9C%8B%E9%9B%BB%E8%A6%96%E5%8A%87) "Player 維基")
