--- a/Drama/偷心玩家.md
+++ b/Drama/偷心玩家.md
@@ -9,6 +9,13 @@
 車雅玲--鄭秀晶 飾  
 從小在育幼院長大  
 地下知名車手，有著與生俱來駕駛本領的賽車手同時也是扒手兼開鎖高手。   
+  
+林炳旻--李施彥 飾  
+駭客專家，個性膽小懦弱，卻在電腦方面有著出眾才能的駭客，曾被國情院挖角的冠軍駭客。  
+  
+都振雄--太元碩 飾  
+前拳擊手，天生打手。因某些原因停止體育選手生涯  
+  
 
 資料
 ===
