--- a/Drama/偷心玩家.md
+++ b/Drama/偷心玩家.md
@@ -16,6 +16,10 @@
 都振雄--太元碩 飾  
 前拳擊手，天生打手。因某些原因停止體育選手生涯  
   
+### 姜赫利/崔秀赫周邊人物
+崔賢杞--許峻豪 飾  
+崔秀赫的爸爸。瑞雲中央地方檢察廳貪汙特殊調查組檢察官，15年前被「那個人」陷害而死。  
+  
 
 資料
 ===
