--- a/Drama/偷心玩家.md
+++ b/Drama/偷心玩家.md
@@ -20,6 +20,27 @@
 崔賢杞--許峻豪 飾  
 崔秀赫的爸爸。瑞雲中央地方檢察廳貪汙特殊調查組檢察官，15年前被「那個人」陷害而死。  
   
+秋妍熙--劉藝彬 飾  
+醫院院長，秋元基的女兒。姜赫利的舊識，唯一了解赫利過往的人，幾次幫助赫利處理因事故而受害的傷者，15年來一直等待父親回家。  
+  
+秋元基--李載久 飾  
+秋妍熙的父親。通緝犯，15年前逃到國外，為了女兒而自首，卻慘遭孟志勳殺害。  
+  
+### 檢察廳
+張仁奎--金元海 飾  
+瑞雲中央地方檢察廳特殊部檢察官  
+負責主導非法受賄小組。17年前曾與年少崔秀赫(姜赫利)見過一面，是秀赫的父親崔賢杞檢察官的後輩，15年前與崔賢杞檢察官在瑞雲中央支檢貪汙特殊調查組一同行動，以清廉清白的崔賢杞為榜樣。  
+  
+孟志勳--安世鎬 飾  
+孟係長，張仁奎檢察室的調查官，因妻兒被「那個人」抓走並威脅而開槍殺死秋元基。   
+  
+劉基訓--李煌義 飾  
+瑞雲中央地方檢察廳3部部長檢察官，後升任檢察長。是崔賢杞的同期及組員。表面上是好人內心卻沉穩險惡怕死為了生存活著而投靠「那個人」，在親密好友崔賢杞死後平步青雲的到達了如今的位置。貪生怕死，是「那個人」的走狗。   
+  
+姜聖宇--李華龍 飾  
+瑞雲中央地方檢察廳1部部長檢察官。  
+  
+### 其他人物
 
 資料
 ===
