--- a/Drama/偷心玩家.md
+++ b/Drama/偷心玩家.md
@@ -4,43 +4,122 @@
 ## 演員陣容
 ### 主要人物
 姜赫利／崔秀赫--宋承憲 飾  
-天才騙子，俊秀的外貌、機智的口才、俐落處事風格，利用帥氣外表和三寸不爛之舌四處騙人完美的騙子。本名為崔秀赫，15年前被殺害的檢察官崔賢杞之子。  
+天才騙子，俊秀的外貌、機智的口才、俐落處事風格，利用帥氣外表和三寸不爛之舌四處騙人完美的騙子。本名為崔秀赫，15年前被殺害的檢察官崔賢杞之子  
   
 車雅玲--鄭秀晶 飾  
 從小在育幼院長大  
-地下知名車手，有著與生俱來駕駛本領的賽車手同時也是扒手兼開鎖高手。   
+地下知名車手，有著與生俱來駕駛本領的賽車手同時也是扒手兼開鎖高手   
   
 林炳旻--李施彥 飾  
-駭客專家，個性膽小懦弱，卻在電腦方面有著出眾才能的駭客，曾被國情院挖角的冠軍駭客。  
+駭客專家，個性膽小懦弱，卻在電腦方面有著出眾才能的駭客，曾被國情院挖角的冠軍駭客  
   
 都振雄--太元碩 飾  
 前拳擊手，天生打手。因某些原因停止體育選手生涯  
   
 ### 姜赫利/崔秀赫周邊人物
 崔賢杞--許峻豪 飾  
-崔秀赫的爸爸。瑞雲中央地方檢察廳貪汙特殊調查組檢察官，15年前被「那個人」陷害而死。  
+崔秀赫的爸爸。瑞雲中央地方檢察廳貪汙特殊調查組檢察官，15年前被「那個人」陷害而死  
   
 秋妍熙--劉藝彬 飾  
-醫院院長，秋元基的女兒。姜赫利的舊識，唯一了解赫利過往的人，幾次幫助赫利處理因事故而受害的傷者，15年來一直等待父親回家。  
+醫院院長，秋元基的女兒。姜赫利的舊識，唯一了解赫利過往的人，幾次幫助赫利處理因事故而受害的傷者，15年來一直等待父親回家  
   
 秋元基--李載久 飾  
-秋妍熙的父親。通緝犯，15年前逃到國外，為了女兒而自首，卻慘遭孟志勳殺害。  
+秋妍熙的父親。通緝犯，15年前逃到國外，為了女兒而自首，卻慘遭孟志勳殺害  
   
 ### 檢察廳
 張仁奎--金元海 飾  
 瑞雲中央地方檢察廳特殊部檢察官  
-負責主導非法受賄小組。17年前曾與年少崔秀赫(姜赫利)見過一面，是秀赫的父親崔賢杞檢察官的後輩，15年前與崔賢杞檢察官在瑞雲中央支檢貪汙特殊調查組一同行動，以清廉清白的崔賢杞為榜樣。  
+負責主導非法受賄小組。17年前曾與年少崔秀赫(姜赫利)見過一面，是秀赫的父親崔賢杞檢察官的後輩，15年前與崔賢杞檢察官在瑞雲中央支檢貪汙特殊調查組一同行動，以清廉清白的崔賢杞為榜樣  
   
 孟志勳--安世鎬 飾  
-孟係長，張仁奎檢察室的調查官，因妻兒被「那個人」抓走並威脅而開槍殺死秋元基。   
+孟係長，張仁奎檢察室的調查官，因妻兒被「那個人」抓走並威脅而開槍殺死秋元基  
   
 劉基訓--李煌義 飾  
-瑞雲中央地方檢察廳3部部長檢察官，後升任檢察長。是崔賢杞的同期及組員。表面上是好人內心卻沉穩險惡怕死為了生存活著而投靠「那個人」，在親密好友崔賢杞死後平步青雲的到達了如今的位置。貪生怕死，是「那個人」的走狗。   
+瑞雲中央地方檢察廳3部部長檢察官，後升任檢察長。是崔賢杞的同期及組員。表面上是好人內心卻沉穩險惡怕死為了生存活著而投靠「那個人」，在親密好友崔賢杞死後平步青雲的到達了如今的位置。貪生怕死，是「那個人」的走狗   
   
 姜聖宇--李華龍 飾  
-瑞雲中央地方檢察廳1部部長檢察官。  
+瑞雲中央地方檢察廳1部部長檢察官  
   
 ### 其他人物
+延在碩--金鐘泰 飾  
+大BOSS「那個人」  
+美昌黨的政治顧問  
+  
+文信男--河洙浩 飾  
+「那個人」的右臂  
+  
+羅元學--金亨默 飾  
+華陽物產社長，打架、運營非法賭場，為了達成自己想要實現的目標而不擇手段  
+  
+羅元學的妻子--李度妍 飾  
+  
+申達洙--閔俊賢 飾  
+刑事重案組組長  
+比起正義和使命感，更接近賄賂和腐敗，照顧黑社會和大企業社長的腐敗刑警。暗地替行真集團池會長做事  
+  
+池木炫--李勝哲 飾  
+行真集團會長，池成久的父親  
+  
+池成久--金聖喆 飾  
+行真集團理事，會長幼子，性暴力慣犯  
+  
+崔政民  
+行真集團策劃本部企劃室長  
+  
+Michael--金瑞慶 飾  
+池成久的同夥  
+  
+洪允熙--李瑟 飾  
+池成久性暴力受害者  
+  
+梁亞奇--姜民泰 飾  
+毒販  
+  
+都振雄的哥哥--琴光山 飾  
+  
+宥利--崔秀敏 飾  
+運動公司仲介，格鬥選手管理人  
+  
+卞英智--朴恩佑 飾  
+永聖保育院的孩子，因為院長的某些關係逃出育幼院。寄養在保育院的少女，平日以偷竊維生。某日巧遇車雅玲，想拜她為師學習偷竊技巧，卻被雅玲勸回永聖保育院好好發奮向上。與黑道勾結，欲利用自身引誘車雅玲現身，卻不知道這樣做也讓自己陷入了危險中  
+  
+白善--朴善宇 飾  
+永聖保育院院長。曾混過黑社會高利貸業者，並私下中介孤兒院內的女童賣淫  
+  
+金勝振--韓基宗 飾  
+議員。美昌黨提名的總統候選人，曾意圖性騷擾旗下輔選團隊的女實習生。後來因「那個人」的政治操作而順利當選總統  
+  
+柳賢子--王智慧 飾  
+金勝振議員的老婆，管理金勝振議員的秘密資金、黑衣人士和打手。在梁惠珠被性騷擾後，曾打電話威脅她不要聲張  
+  
+梁惠珠--李清美 飾  
+金勝振議員輔選團隊的女實習生，正在輔佐金勝振議員競選連任。某日金勝振議員意圖性騷擾，但因拒絕而被誣陷使用毒品入獄  
+  
+蘇漢娜--裴敏靜 飾  
+金勝振議員輔選團隊的女實習生  
+  
+千東燮--郭子衡 飾  
+高利貸業者，他是地下經濟中的大腕，人稱「千會長」。併吞中小企業、用非法貸款吸吮平民血液都是當然的，還經營詐騙賭場、做毒品買賣、恐嚇威脅……等等只要是能賺錢的事，無論什麼事都不擇手段，惡霸中的惡霸。做了那麼多壞事的他，被突然出現的赫利所誘騙，最終破產又被判重刑，後因那個人的幫助假釋出獄，因此現在他的計劃只有一個，就是殺了赫利  
+  
+朴昌賢  
+東明貨幣兌換所負責人，幫千會長洗錢的人  
+  
+南社長--朴振宇 飾  
+非法交易車輛社長  
+  
+楊泰--延濟旭 飾  
+南社長手下  
+  
+### 特別出演
+元盛酒店警衛--俞承豪 飾  
+汽車路考監考官--洪錫天 飾  
+大炮車社長--許在浩 飾  
+申庸國--趙在允 飾  
+記者  
+  
+陳勇俊--鄭殷杓 飾  
+律師  
+  
 
 資料
 ===
